@startuml
class Cell {
    - cellValue
    + getCellValue
    + setCellValue
}

class Movement {
    - currentRow
    - currentColumn
    + getCurrentRow
    + getCurrentColumn
    + handleCommand
    - moveUp
    - moveDown
    - moveLeft
    - moveRight
}

class Sheet {
    - rows
    - columns
    - cells
    - currentCell
    - spacing
    + Sheet
    + getCellValue
    + setCellValue
    + getCurrentCell
    + setCurrentCell
    + getCurrentRow
    + getCurrentColumn
    + getCellContent
    + setCellValue
    + getCells
    + getCellName
}

class Menu {
    + showSheet
}

class HojaDeCalculo {
    - sheet
    - movement
    - input
    + HojaDeCalculo
    + run
}

class MathOperations {
    + evaluateFormula
    - evaluateExpression
    - getCellValue
    - isOperator
    - precedence
    - applyOperation
}

Main --> HojaDeCalculo
Sheet *-down- Cell
HojaDeCalculo *-down- Sheet
Movement --> Sheet
HojaDeCalculo --> Movement
Menu --> Sheet
Sheet --> MathOperations
@enduml

